# E2E-ML-Project

./: LICENSE  README.md  app.py  pyproject.toml  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  trials.ipynb
src/mlproject/: exception.py  logger.py
src/mlproject/constants/: __init__.py
src/mlproject/utils/: common.py
