[tool.poetry]
name = "e2e-mlproject"
version = "0.1.0"
description = "example project"
authors = ["Lakitosh Singh <lakitosh@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
mlflow = "^2.7.0"   # Specify a version here
numpy = "^1.24.0"
notebook = "^7.0.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
python-box = "^7.0.0"
pyYAML = "^6.0"
flask = "^2.3.0"